Bug 394026 - regression: changing axis range not applied
Summary: regression: changing axis range not applied
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-08 23:38 UTC by uwestoehr
Modified: 2018-05-09 19:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2018-05-08 23:38:59 UTC
- create a new table with 2 columns
- fill the table columns with row numbers
- highlight both columns and create a new custom fit in new fit in new worksheet
- try to change the x-axis to see the part form x= 10..25

result: this fails. You can enter 10 as start for x or whatever but nothing changes. There is no apply button to apply the changed value or so. But checking/unchecking the AutoFit option is applied immediately, so the bug is that changes to values are not applied.

Regression to former 2.5 RC versions.
Comment 1 Alexander Semke 2018-05-09 06:21:48 UTC
The problem here is that the changes in the data ranges for the plot and for the axes are applied only after the user hits the Return/Enter button. The reason behind this that if we accept and re-act on every number character change, we'd recalculate everything in the plot which is quite expensive if you deal with big number of data points in the plotted curves.

So, for example if you want to change the x-region from [0, 1500] to [0, 1200] and start using the backspace to delete '0', '0', '5' and then entering '2', '0','0', there will be 6 "change signals" which would automatically lead to the 6 recalculation of the plot, where only the last recalculation is relevant for the user.

For the autofit-option the change is applied immediately since there is only one single change-signal in this case and we can recalculate immediately.

I agree that the current behavior with the data ranges causes confusion. The current implementation was done having the performance drawbacks in mind when plotting big amount of data. But I think we should change this behavior in order to reduce the amount of confusion. For small data the recalculation is fast enough on the more or less up-to-date hardware and we can recalculate after every single character change.
Comment 2 Alexander Semke 2018-05-09 19:28:46 UTC
Git commit a80f9d3508ac2bf3ac0904eae97d8b3835ffb29a by Alexander Semke.
Committed on 09/05/2018 at 19:27.
Pushed by asemke into branch 'master'.

Immediately accept keybord changes in the data range text field for plots and axis and not only after Return/Enter was pressed.
FIXED-IN: 2.5

M  +9    -9    src/kdefrontend/dockwidgets/AxisDock.cpp
M  +9    -9    src/kdefrontend/dockwidgets/CartesianPlotDock.cpp

https://commits.kde.org/labplot/a80f9d3508ac2bf3ac0904eae97d8b3835ffb29a