Immediately accept keybord changes in the data range text field for plots and axis and not only after Return/Enter was pressed.

BUG: 394026
FIXED-IN: 2.5